--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=Gerador-de-Pagamento
-spring.datasource.url=jdbc:postgresql://localhost:5432/Pagamento
-spring.datasource.username=postgres
-spring.datasource.password=180320
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
