--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
+api.security.token.secret=${JWT_SECRET:my-secret-key}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
